--- a/Source/Strive/Rendering/Strive.Rendering.csproj
+++ b/Source/Strive/Rendering/Strive.Rendering.csproj
@@ -202,6 +202,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Models\TerrainData.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Textures\ITexture.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
