--- a/Source/Strive/Common/Strive.Common.csproj
+++ b/Source/Strive/Common/Strive.Common.csproj
@@ -99,6 +99,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Constants.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Http.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
