--- a/Source/Strive/Network/Messages/Strive.Network.Messages.csproj
+++ b/Source/Strive/Network/Messages/Strive.Network.Messages.csproj
@@ -174,6 +174,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "ToClient\AddTerrainCollection.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "ToClient\AddWieldable.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
