--- a/Source/Strive/Rendering/TV3D/Strive.Rendering.TV3D.csproj
+++ b/Source/Strive/Rendering/TV3D/Strive.Rendering.TV3D.csproj
@@ -115,6 +115,11 @@
                     Lcid = "0"
                     WrapperTool = "tlbimp"
                 />
+                <Reference
+                    Name = "Strive.Common"
+                    Project = "{FCB073C1-253E-46D8-BCE4-79B1C1616058}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
@@ -181,6 +186,11 @@
                 />
                 <File
                     RelPath = "Models\Terrain.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Models\TerrainChunk.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
