--- a/Source/Strive/UI/WorldView/Strive.UI.WorldView.csproj
+++ b/Source/Strive/UI/WorldView/Strive.UI.WorldView.csproj
@@ -109,6 +109,11 @@
                     Project = "{E8037631-248F-411C-BA3A-744FE15704EC}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "Strive.Common"
+                    Project = "{FCB073C1-253E-46D8-BCE4-79B1C1616058}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
@@ -130,11 +135,6 @@
                 />
                 <File
                     RelPath = "TerrainCollection.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "TerrainPiece.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
