--- a/Source/Strive/Rendering/Strive.Rendering.csproj
+++ b/Source/Strive/Rendering/Strive.Rendering.csproj
@@ -202,7 +202,7 @@
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "Models\TerrainData.cs"
+                    RelPath = "Models\ITerrainChunk.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
