--- a/Source/Strive/UI/Strive.UI.csproj
+++ b/Source/Strive/UI/Strive.UI.csproj
@@ -156,11 +156,6 @@
                     WrapperTool = "tlbimp"
                 />
                 <Reference
-                    Name = "MagicLibrary"
-                    Project = "{92F94EA0-9910-4895-B8A1-FED1543A9DA1}"
-                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
-                />
-                <Reference
                     Name = "Strive.Rendering.TV3D"
                     Project = "{0D415106-F5A0-4DAD-B8A5-48AE0E7E74AB}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
@@ -196,6 +191,12 @@
                     VersionMinor = "0"
                     Lcid = "0"
                     WrapperTool = "aximp"
+                />
+                <Reference
+                    Name = "MagicLibrary"
+                    AssemblyName = "MagicLibrary"
+                    HintPath = "C:\Program Files\Crownwood Consulting Ltd\Magic Library 1.7.4\Bin\MagicLibrary.DLL"
+                    AssemblyFolderKey = "hklm\dn\magic library"
                 />
             </References>
         </Build>
