--- a/Source/Strive/UI/WorldBuilder/Strive.UI.WorldBuilder.csproj
+++ b/Source/Strive/UI/WorldBuilder/Strive.UI.WorldBuilder.csproj
@@ -1,8 +1,8 @@
 <VisualStudioProject>
     <CSHARP
         ProjectType = "Local"
-        ProductVersion = "7.0.9466"
-        SchemaVersion = "1.0"
+        ProductVersion = "7.10.3077"
+        SchemaVersion = "2.0"
         ProjectGuid = "{F057E473-9045-4A78-80BF-F428959CA59D}"
     >
         <Build>
@@ -16,7 +16,10 @@
                 DefaultTargetSchema = "IE50"
                 DelaySign = "false"
                 OutputType = "WinExe"
+                PreBuildEvent = ""
+                PostBuildEvent = ""
                 RootNamespace = "Strive.UI.WorldBuilder"
+                RunPostBuildEvent = "OnBuildSuccess"
                 StartupObject = "Strive.UI.WorldBuilder.WinMain"
             >
                 <Config
@@ -30,6 +33,8 @@
                     DebugSymbols = "true"
                     FileAlignment = "4096"
                     IncrementalBuild = "true"
+                    NoStdLib = "false"
+                    NoWarn = ""
                     Optimize = "false"
                     OutputPath = "bin\Debug\"
                     RegisterForComInterop = "false"
@@ -48,6 +53,8 @@
                     DebugSymbols = "false"
                     FileAlignment = "4096"
                     IncrementalBuild = "false"
+                    NoStdLib = "false"
+                    NoWarn = ""
                     Optimize = "true"
                     OutputPath = "bin\Release\"
                     RegisterForComInterop = "false"
@@ -123,11 +130,6 @@
                 <Reference
                     Name = "Strive.UI.WorldView"
                     Project = "{34B1BDF7-749D-4595-9F39-64A9D8FDA883}"
-                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
-                />
-                <Reference
-                    Name = "Strive.Rendering.R3D"
-                    Project = "{60959A92-CEA0-421D-86DE-97F4B5E85D8E}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
                 <Reference
