--- a/Source/Strive/Common/Strive.Common.csproj
+++ b/Source/Strive/Common/Strive.Common.csproj
@@ -94,6 +94,11 @@
         <Files>
             <Include>
                 <File
+                    RelPath = "AccurateTimer.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "AssemblyInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
