terrain in the distance loading

--- a/Source/Strive/UI/Strive.UI.csproj
+++ b/Source/Strive/UI/Strive.UI.csproj
@@ -233,7 +233,7 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
-                    RelPath = "Engine\GameLoop.cs"
+                    RelPath = "Engine\InputProcessor.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
