--- a/Source/Strive/www.strive3d.net/www.strive3d.net.csproj
+++ b/Source/Strive/www.strive3d.net/www.strive3d.net.csproj
@@ -174,6 +174,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "DesktopPortalBanner.ascx.resx"
+                    DependentUpon = "DesktopPortalBanner.ascx.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Global.asax"
                     SubType = "Component"
                     BuildAction = "Content"
