--- a/Source/Strive/Server/Shared/Strive.Server.Shared.csproj
+++ b/Source/Strive/Server/Shared/Strive.Server.Shared.csproj
@@ -153,6 +153,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Party.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "SkillCommandProcessor.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
