New terrain view

--- a/Source/Strive/www.strive3d.net/www.strive3d.net.csproj
+++ b/Source/Strive/www.strive3d.net/www.strive3d.net.csproj
@@ -826,6 +826,10 @@
                     BuildAction = "Content"
                 />
                 <File
+                    RelPath = "images\object.GIF"
+                    BuildAction = "Content"
+                />
+                <File
                     RelPath = "images\plus.gif"
                     BuildAction = "Content"
                 />
