--- a/Source/Strive/www.strive3d.net/www.strive3d.net.csproj
+++ b/Source/Strive/www.strive3d.net/www.strive3d.net.csproj
@@ -1241,6 +1241,11 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "players\builders\terrain\showterrainpieceobject.aspx"
+                    SubType = "Form"
+                    BuildAction = "Content"
+                />
+                <File
                     RelPath = "players\builders\terrain\WorldMap.aspx"
                     SubType = "Form"
                     BuildAction = "Content"
