--- a/Source/Strive/Data/Strive.Data.csproj
+++ b/Source/Strive/Data/Strive.Data.csproj
@@ -89,6 +89,16 @@
                     Project = "{3781C605-0BA3-4DD2-91BB-F01368CD060F}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "System.Drawing"
+                    AssemblyName = "System.Drawing"
+                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Drawing.dll"
+                />
+                <Reference
+                    Name = "Strive.Common"
+                    Project = "{FCB073C1-253E-46D8-BCE4-79B1C1616058}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
@@ -105,6 +115,11 @@
                 />
                 <File
                     RelPath = "MultiverseFactory.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "TerrainHeightMapHelper.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
